--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "purescript-strings": "^2.1.0",
     "purescript-newtype": "^1.3.0",
     "purescript-exceptions": "^2.0.0",
-    "purescript-maybe": "^2.0.1"
+    "purescript-maybe": "^2.0.1",
+    "purescript-partial": "^1.2.0",
+    "purescript-unsafe-coerce": "^2.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
