--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "purescript-exceptions": "^2.0.0",
     "purescript-maybe": "^2.0.1",
     "purescript-partial": "^1.2.0",
-    "purescript-unsafe-coerce": "^2.0.0"
+    "purescript-unsafe-coerce": "^2.0.0",
+    "purescript-nullable": "^2.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
