--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,10 @@
   ],
   "dependencies": {
     "purescript-eff": "^2.0.0",
-    "purescript-prelude": "^2.3.0"
+    "purescript-prelude": "^2.3.0",
+    "purescript-express": "^0.4.2",
+    "purescript-aff": "^2.0.2",
+    "purescript-functions": "^2.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
