--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "purescript-functions": "^2.0.0",
     "purescript-strings": "^2.1.0",
     "purescript-newtype": "^1.3.0",
-    "purescript-exceptions": "^2.0.0"
+    "purescript-exceptions": "^2.0.0",
+    "purescript-maybe": "^2.0.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
