--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "purescript-prelude": "^2.3.0",
     "purescript-express": "^0.4.2",
     "purescript-aff": "^2.0.2",
-    "purescript-functions": "^2.0.0"
+    "purescript-functions": "^2.0.0",
+    "purescript-strings": "^2.1.0",
+    "purescript-newtype": "^1.3.0",
+    "purescript-exceptions": "^2.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^2.0.0"
